fixed visibility issues (partial visibility)

--- a/src/components/pages/LandingPage/styles.less
+++ b/src/components/pages/LandingPage/styles.less
@@ -54,7 +54,8 @@ img {
   width: 100vw;
   height: 100vh;
   background-color: #999;
-  z-index: -1;
+  // z-index: -1;
+  visibility: hidden;
   button {
     background-color: rgb(207, 80, 80);
     z-index: 2000;
